log
Mon 22 Apr 2024 11:29:26 PM UTC: 
 tests:  0|6
total_score: 0/70
33a2d76
Wed 24 Apr 2024 12:24:30 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d84aadd
Wed 24 Apr 2024 12:24:43 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
165b86c
Wed 24 Apr 2024 12:26:18 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
c085c37
Wed 24 Apr 2024 12:33:11 AM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:9: error: unused variable ‘par’ [-Werror=unused-variable]
   43 |   Pair *par = createPair(key, value);
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
889c946
